--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 
             </div>
         </div>
-        <button class="span-two all-clear">AC</button>
+        <button class="span-two data-all-clear">AC</button>
         <button class="data-delete">DEL</button>
         <button class="data-operation">&divide</button>
         <button class="data-number">1</button>
